Fix alignment issues with lost password form closes #29325

--- a/assets/css/twenty-twenty.scss
+++ b/assets/css/twenty-twenty.scss
@@ -2474,6 +2474,12 @@ a.reset_variations {
 				margin: 1.5rem 0;
 			}
 		}
+
+		.woocommerce-ResetPassword {
+			.woocommerce-form-row--first {
+				float: none;
+			}
+		}
 	}
 
 	/**
